WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
46809
REGRESSION (
r67979
): All tests crashing on Windows WebKit2 test bot
https://bugs.webkit.org/show_bug.cgi?id=46809
Summary
REGRESSION (r67979): All tests crashing on Windows WebKit2 test bot
Adam Roben (:aroben)
Reported
2010-09-29 07:42:29 PDT
All tests are crashing on the Windows WebKit2 test bot.
Attachments
Look for WebKit.dll (not WebKit_debug.dll) when launching the web process in Debug builds
(1.58 KB, patch)
2010-09-29 07:48 PDT
,
Adam Roben (:aroben)
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2010-09-29 07:42:58 PDT
<
rdar://problem/8491809
>
Adam Roben (:aroben)
Comment 2
2010-09-29 07:48:26 PDT
Created
attachment 69196
[details]
Look for WebKit.dll (not WebKit_debug.dll) when launching the web process in Debug builds
Adam Roben (:aroben)
Comment 3
2010-09-29 08:36:52 PDT
Committed
r68646
: <
http://trac.webkit.org/changeset/68646
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug