third_party/WebKit/WebKit2/UIProcess/Launcher/win/ProcessLauncherWin.cpp
@@ -33,9 +33,13 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #if !defined(NDEBUG) && (!defined(DEBUG_INTERNAL) || defined(DEBUG_ALL))
 const LPCWSTR webProcessName = L"WebKit2WebProcess_debug.exe";
-const LPCWSTR webKitDLLName = L"WebKit_debug.dll";
 #else
 const LPCWSTR webProcessName = L"WebKit2WebProcess.exe";
+#endif
+
+#ifdef DEBUG_ALL
+const LPCWSTR webKitDLLName = L"WebKit_debug.dll";
+#else
 const LPCWSTR webKitDLLName = L"WebKit.dll";
 #endif
 
